# douban-scout

./: .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  AGENTS.md  AGENT_HANDOFF.md  LICENSE  README.md  TODO.md  docker-compose.example.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  AGENTS.md  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: cache.py  config.py  database.py  limiter.py  logging_config.py  main.py  metadata_constants.py  schemas.py
backend/app/dependencies/: auth.py
backend/app/routers/: data_import.py  movies.py
backend/app/services/: import_service.py  movie_service.py  poster_service.py
backend/scripts/: format.sh  generate_metadata.py  lint.sh  test.sh
backend/tests/: conftest.py  test_api.py  test_cache.py  test_metadata_extraction.py  test_poster_cache.py  test_rate_limit.py  test_regions.py  test_services.py  test_year_filter.py
frontend/: .dockerignore  .eslintrc.cjs  AGENTS.md  Dockerfile  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx  index.css  main.tsx
frontend/src/components/: FilterSidebar.test.tsx  FilterSidebar.tsx  GitHubIcon.tsx  ImportStatus.tsx  MovieCard.test.tsx  MovieCard.tsx  MovieGrid.tsx  NotificationToast.tsx  PosterImage.test.tsx  PosterImage.tsx  SearchBar.tsx  ThemeToggle.tsx
frontend/src/hooks/: useInfiniteScroll.test.ts  useInfiniteScroll.ts  useTheme.test.ts  useTheme.ts  useUrlSync.test.ts  useUrlSync.ts
frontend/src/services/: api.test.ts  api.ts
frontend/src/store/: useFilterStore.test.ts  useFilterStore.ts  useNotificationStore.test.ts  useNotificationStore.ts
frontend/src/test/: setup.ts
frontend/src/types/: movie.ts
frontend/src/utils/: urlParams.test.ts  urlParams.ts
import/: .gitkeep
scripts/: fix-all.sh  generate_metadata.py  setup-hooks.sh  sync_env_docs.py
